Upgrade Button Styling  Fix (#302)
The Upgrade to latest version in about modal was distorted. This PR aligns the styling of that button

--- a/src/components/Navbar/styles/InfoModal.module.css
+++ b/src/components/Navbar/styles/InfoModal.module.css
@@ -1,110 +1,111 @@
 .container {
-    height: 100%;
-    width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .aboutTitle {
 	/* font-size: 1rem; */
 	font-weight: 500;
-    text-align: center;
+	text-align: center;
 }
 
 .parseableText {
-    color: #FC466B;
-    font-weight: 600;
+	color: #fc466b;
+	font-weight: 600;
 }
 
 .aboutDescription {
-    text-align: center;
-    color: #868e96;
+	text-align: center;
+	color: #868e96;
 
-    &::after {
-        content: '';
-        border-radius: 0.5rem;
-        display: block;
-        background-color: #FC466B;
-        width: 6.25rem;
-        height: 0.125rem;
-        margin-top: 0.5rem;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0.75rem;
-    }
+	&::after {
+		content: '';
+		border-radius: 0.5rem;
+		display: block;
+		background-color: #fc466b;
+		width: 6.25rem;
+		height: 0.125rem;
+		margin-top: 0.5rem;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 0.75rem;
+	}
 }
 
 .aboutTextBox {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-    width: 100%;
-    display: flex;
-    border-radius: 0.5rem;
-    border: 0.0625rem solid rgba(0, 0, 0, 0.05);
-    padding: 0.6rem 0.9rem;
-    flex-direction: column;
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+	width: 100%;
+	display: flex;
+	border-radius: 0.5rem;
+	border: 0.0625rem solid rgba(0, 0, 0, 0.05);
+	padding: 0.6rem 0.9rem;
+	flex-direction: column;
 }
 
 .aboutTextInnerBox {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    margin-top: 0.625rem;
-    margin-bottom: 0.625rem;
+	display: flex;
+	width: 100%;
+	align-items: center;
+	margin-top: 0.625rem;
+	margin-bottom: 0.625rem;
 }
 
 .aboutTextKey {
-    font-size: 0.7rem;
-    color: #343a40;
-    line-height: normal;
-    width: 30%;
-    font-weight: 500;
+	font-size: 0.7rem;
+	color: #343a40;
+	line-height: normal;
+	width: 30%;
+	font-weight: 500;
 }
 
 .aboutTextValue {
-    font-size: 0.7rem;
-    color: #868e96;
-    line-height: normal;
-    width: 70%;
+	font-size: 0.7rem;
+	color: #868e96;
+	line-height: normal;
+	width: 70%;
 }
 
 .helpTitle {
-    font-size: 1rem;
-    text-align: center;
-    color: #495057;
-    font-weight: 700;
+	font-size: 1rem;
+	text-align: center;
+	color: #495057;
+	font-weight: 700;
 }
 
 .HelpIconBox {
-    &:hover {
-        color: #1F288E;
-        transform: scale(1.4);
-    }
-    height: 34px;
-    transition: transform 0.2s ease-in-out;
-    width: 34px;
-    padding: 0;
-    margin-inline-end: 0.625rem;
-    background-color: #FFFFFF;
-    color: #495057;
-    border: 0.0625rem solid rgba(0, 0, 0, 0.05);
+	&:hover {
+		color: #1f288e;
+		transform: scale(1.4);
+	}
+	height: 34px;
+	transition: transform 0.2s ease-in-out;
+	width: 34px;
+	padding: 0;
+	margin-inline-end: 0.625rem;
+	background-color: #ffffff;
+	color: #495057;
+	border: 0.0625rem solid rgba(0, 0, 0, 0.05);
 }
 
 .helpIconContainer {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	justify-content: center;
 }
 
 .actionBtn {
-	color: #545BEB;
+	color: #545beb;
 	border-radius: 0.5rem;
-	border: 1px solid #E0E0E0;
+	border: 1px solid #e0e0e0;
 	position: absolute;
 	right: 2.25rem;
-	transform: transform .2s ease-in-out;
+	transform: transform 0.2s ease-in-out;
+	min-width: 14rem;
 	&:hover {
 		transform: scale(1.03);
-		color: #FC466B;
+		color: #fc466b;
 		background-color: white;
 	}
 }
